# e2asm

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-test.yaml
codegen/: code_generator.cpp  code_generator.h  instruction_encoder.cpp  instruction_encoder.h  instruction_tables.h  modrm_generator.cpp  modrm_generator.h
core/: assembler.cpp  assembler.h  error.h
lexer/: lexer.cpp  lexer.h  source_location.h  token.h
parser/: ast.h  expression_parser.cpp  expression_parser.h  parser.cpp  parser.h
preprocessor/: preprocessor.cpp  preprocessor.h
semantic/: semantic_analyzer.cpp  semantic_analyzer.h  symbol_table.cpp  symbol_table.h
test/: integration_test.cpp  lexer_test.cpp  parser_test.cpp  semantic_test.cpp
